# safely

./: .travis.yml  CMakeLists.txt  CMakeUninst.txt.in  CNAME  COPYING  Makefile  README.md  go.mod  go.sum  index.html  safely.1.html  safely.go
db/: db.go  lock.go
debian/: changelog  control  copyright  rules
docs/: safely.1  safely.1.md
gpg/: gpg.go
man/: safely.1  safely.1.md
oath/: oath.go
src/: config.h.in  db.c  db.h  gpg.c  gpg.h  interface.c  interface.h  item.c  item.h  main.c  printf.c  printf.h  safely.c  security.c  security.h  util.c  util.h
src/db/: db.go  lock.go
src/gpg/: gpg.go
src/main/safely/: safely.go
src/oath/: oath.go
src/term/: term.go
src/util/: util.go
term/: term.go
util/: util.go
