# Safely CMakeLists.txt
# Copyright (C) 2011 Alessandro Ghedini <al3xbio@gmail.com>
# This file is released under the 3 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(safely C)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 8)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
INCLUDE(CheckIncludeFiles)

PKG_CHECK_MODULES(JANSSON jansson REQUIRED)

FILE(GLOB SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")

ADD_EXECUTABLE(safely ${SOURCES})

FIND_PROGRAM(
	GPGME_CONFIG_COMMAND
	NAMES gpgme-config
)

IF (NOT GPGME_CONFIG_COMMAND)
	MESSAGE(FATAL_ERROR "gpgme-config command not found (is libgpgme installed?).")
ELSE()
	EXEC_PROGRAM(
		${GPGME_CONFIG_COMMAND}
		ARGS --libs
		OUTPUT_VARIABLE GPGME_LIBRARIES
	)

	EXEC_PROGRAM(
		${GPGME_CONFIG_COMMAND}
		ARGS --cflags
		OUTPUT_VARIABLE JANSSON_INCLUDE_DIRS
	)
ENDIF(NOT GPGME_CONFIG_COMMAND)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}/src
	${JANSSON_INCLUDE_DIRS}
	${GPGME_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(
	safely
	${JANSSON_LIBRARIES}
	${GPGME_LIBRARIES}
)

SET_TARGET_PROPERTIES(safely PROPERTIES
	COMPILE_FLAGS "-Wall -pedantic -O3"
)

INSTALL(TARGETS safely
	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
	PERMISSIONS
		OWNER_WRITE OWNER_READ OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE
		WORLD_READ WORLD_EXECUTE
		SETUID
)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/man/safely.1
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
)

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/CMakeUninst.txt.in
	${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
	COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninst.txt
)
