# safely CMakeLists.txt
# Copyright (C) 2011-2012 Alessandro Ghedini <alessandro@ghedini.me>
# This file is released under the 2 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(safely C)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 6)

SET(SAFELY_VERSION ${VERSION_MAJOR}.${VERSION_MINOR})

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
INCLUDE(CheckIncludeFiles)

PKG_CHECK_MODULES(JANSSON jansson REQUIRED)

CHECK_INCLUDE_FILES(lockfile.h HAVE_LOCKFILE_H)

FILE(GLOB SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")

ADD_EXECUTABLE(safely ${SOURCES})

FIND_PROGRAM(
	GPGME_CONFIG_COMMAND
	NAMES gpgme-config
)

IF (NOT GPGME_CONFIG_COMMAND)
	MESSAGE(FATAL_ERROR "gpgme-config command not found (is libgpgme installed?).")
ELSE()
	EXEC_PROGRAM(
		${GPGME_CONFIG_COMMAND}
		ARGS --libs
		OUTPUT_VARIABLE GPGME_LIBRARIES
	)

	EXEC_PROGRAM(
		${GPGME_CONFIG_COMMAND}
		ARGS --cflags
		OUTPUT_VARIABLE JANSSON_INCLUDE_DIRS
	)
ENDIF(NOT GPGME_CONFIG_COMMAND)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/src
	${JANSSON_INCLUDE_DIRS}
	${GPGME_INCLUDE_DIRS}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET(LIBS ${JANSSON_LIBRARIES} ${GPGME_LIBRARIES})

IF (HAVE_LOCKFILE_H)
	SET(LIBS ${LIBS} "-llockfile")
ENDIF (HAVE_LOCKFILE_H)

TARGET_LINK_LIBRARIES(safely ${LIBS})

SET_TARGET_PROPERTIES(safely PROPERTIES
	COMPILE_FLAGS "-D_FILE_OFFSET_BITS=64 -Wall -pedantic -g -std=gnu99 -D_GNU_SOURCE"
)

INSTALL(TARGETS safely DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/docs/safely.1
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
)
